# writing-assistant

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
data/: users.json
src/writing_assistant/: chat_graph.py  chat_state.py  user_manager.py
src/writing_assistant/nodes/: confirm_memories_node.py  draft_node.py  feedback_node.py  human_feedback.py  memory_node.py  memory_selector_node.py  revisor_node.py
